--- a/views/email.ejs
+++ b/views/email.ejs
@@ -141,7 +141,7 @@
                     <tr>
                         <td bgcolor="#ffffff" align="left"
                             style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <p style="margin: 0;">Dear <%= to %>, <br>
+                            <p style="margin: 0;">Dear <%= cname %>, <br>
                                 We hereby Confirm your Booking for <b> Mehta Laser Cutting Machine</b>. <br><br> The Timings are as Following: <br><br>
                               <table border="1" width="100%">
                                 <tr align="center" >
