--- a/views/new.ejs
+++ b/views/new.ejs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Convert Datetimes to UTC</title>
+    <title>Mehta Laser Cutting Machine | Booking Portal, TL IITGN</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
