User Login Added

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet">
     <style>
-   
+
     </style>
 </head>
 
@@ -28,7 +28,9 @@
             <div onclick="location.href='/manage'"><i class="lni lni-users"></i>
                 <div>User Management</div>
             </div>
-            <div onclick="location.href='/inventory'"><i class="lni lni-hammer"></i><div>Inventory</div></div>
+            <div onclick="location.href='/inventory'"><i class="lni lni-hammer"></i>
+                <div>Inventory</div>
+            </div>
             <div>
                 <i class="lni lni-comments-reply"></i>
                 <div>Complaints</div>
@@ -40,9 +42,9 @@
                 </div>
             </div>
             <div><i class="lni lni-exit"></i>
-            <div onclick="location.href='/logout'">
-                Logout
-            </div>
+                <div onclick="location.href='/logout'">
+                    Logout
+                </div>
             </div>
         </div>
     </div>
