--- a/views/calender.ejs
+++ b/views/calender.ejs
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calender</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@event-calendar/build@1.5.0/event-calendar.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@event-calendar/build@1.5.0/event-calendar.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/@event-calendar/build@1.5.0/event-calendar.min.js"></script>
     <style>
-        body{
+        body {
             font-family: sans-serif;
         }
     </style>
 </head>
-<body>
-    <div id = 'ec'>
 
-    </div>
+<body>
+    <div id="ec"></div>
     <script>
-        fetch('/all')
-                .then(response => response.json())
-                .then(data => {
-                    let ec = new EventCalendar(document.getElementById('ec'), {
-                        view: 'timeGridDay',
-                        events: data
-                    });
-                })
-                .catch(error => {
-                    console.error('Error fetching JSON:', error);
+        fetch("/all")
+            .then((response) => response.json())
+            .then((data) => {
+                let ec = new EventCalendar(document.getElementById("ec"), {
+                    view: "dayGridMonth",
+                    events: data,
                 });
-               
+            })
+            .catch((error) => {
+                console.error("Error fetching JSON:", error);
+            });
     </script>
 </body>
+
 </html>
